<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etActivityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_name"
        android:inputType="text"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinnerActivityType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etActivityEnergy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_energy"
        android:inputType="number"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etActivityPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_people"
        android:inputType="text"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etActivityMood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_mood"
        android:inputType="text"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etActivityNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_notes"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:maxLines="4"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etActivityRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_rating"
        android:inputType="numberDecimal"
        android:layout_marginBottom="8dp" />

</LinearLayout>